# text-albumentations

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: batch_augmentation.py  custom_preprocessing.py  example_custom_preprocessing.py  example_long_text_to_jsonl.py  example_minimal.py  example_multiple_augmentations.py  example_openai_async.py  example_openai_sync.py  example_transformers_gemma.py  long_text_to_jsonl.py  minimal.py  multiple_augmentations.py  openai_async.py  openai_sync.py  outlines_transformers_batch.py  quickstart.py  retrieval_external_groups.py  vertex_ai.py
scripts/: benchmark_reasoning_effort_usage.py  compare_openai_json_modes.py  filter_paper_instructions_quality.py
tests/: conftest.py  test_batch_postfilter.py  test_easy.py  test_economy.py  test_integration_local_server.py  test_meta.py  test_models.py  test_postfilter.py  test_quality.py  test_retrieval.py  test_task_adapters.py  test_task_factory.py  test_vertex.py
text_albumentations/: __init__.py  base.py  batch_postfilter.py  easy.py  economy.py  economy_router.py  ingest.py  meta.py  modeling.py  models.py  postfilter.py  quality.py  reasoning.py  runner.py  runtime.py  utils.py  vertex.py
text_albumentations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
text_albumentations/output_format_adapters/: __init__.py  alpaca.py
text_albumentations/response_formats/: __init__.py  base.py
text_albumentations/tasks/: __init__.py  backtranslation.py  bullets.py  claim_evidence_plan.py  claim_verification.py  classification.py  cloze.py  comparison.py  continuation.py  counterfactual.py  definition_extraction.py  distractor_qa.py  entity_extraction.py  error_correction.py  evidence_selection.py  extractive_qa.py  method_steps.py  qa_pairs.py  query_generation.py  rephrase.py  retrieval.py  section_heading.py  sentence_contrast_plan.py  sentence_equivalence_plan.py  structured_records.py  style_transfer.py  summarize.py  title.py  triplets.py
