[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-albumentations"
version = "0.1.0"
description = "Structured synthetic text data generation for SFT and distillation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.30.0",
    "outlines>=1.2.12",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["text_albumentations*"]
