[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-albumentations"
version = "0.4.0"
description = "Structured synthetic text data generation for SFT and distillation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Avishek Biswas" },
]
urls = { Repository = "https://github.com/avbiswas/text-albumentations" }
dependencies = [
    "openai>=2.30.0",
    "outlines>=1.2.12",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["text_albumentations*"]
