[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-albumentations"
version = "2.0.0"
description = "Structured synthetic text data generation for SFT and distillation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Avishek Biswas" },
]
urls = { Repository = "https://github.com/avbiswas/text-albumentations" }
dependencies = [
    "openai>=2.30.0",
    "outlines>=1.2.12",
    "pydantic>=2",
]

[project.optional-dependencies]
vertex = ["google-genai>=1.0"]

[dependency-groups]
dev = [
    "datasets>=4.8.5",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that need a live model server (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["text_albumentations*"]
